Fix horizontal scroll issue.

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -111,12 +111,16 @@ button, input, select, textarea, optgroup {
   }
 
   html {
+    width: 100%;
+    overflow-x: hidden;
     scroll-behavior: smooth;
     font-family: 'Al-Jazeera', sans-serif !important;
   }
 
   body {
     @apply bg-background text-foreground;
+    width: 100%;
+    overflow-x: hidden;
     font-family: 'Al-Jazeera', sans-serif !important;
   }
 
